k8s/platform/cicd/argocd/httproute.yaml
# yaml-language-server $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-route
spec:
  parentRefs:
    - name: cilium-gw
      namespace: gateway
      sectionName: https
  hostnames:
    - argocd.k8s.u74n.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
